--- a/style.css
+++ b/style.css
@@ -9,9 +9,9 @@
 body{
   min-height: 100vh;
   width: 100%;
-  background: #009579;
 }
-.container{
+
+.container-main{
   position: absolute;
   top: 50%;
   left: 50%;
@@ -21,9 +21,9 @@ body{
   background: #fff;
   border-radius: 7px;
   box-shadow: 0 5px 10px rgba(0,0,0,0.3);
-  display: none;
+  /* display: none; */
 }
-.container .registration{
+.container-main .registration{
   display: none;
 }
 #check:checked ~ .registration{
@@ -35,7 +35,7 @@ body{
 #check{
   display: none;
 }
-.container .form{
+.container-main .form{
   padding: 2rem;
 }
 .form header{
@@ -94,15 +94,11 @@ body{
     border-radius: 8px; /* Adjust the value as needed */
     /* overflow: hidden;  */
 }
-.sunday {
-    background-color: red; /* Or any shade of red you prefer */
-  }
-  
+
 #attendance-section {
     width: 300px;
     margin: 50px auto;
     text-align: center;
-    /* background-color: #34d9fa; */
 }
 
 input[type="text"], input[type="password"] {
@@ -115,7 +111,8 @@ button {
     width: 100%;
     padding: 10px;
     margin-top: 10px;
-    background-color: #4CAF50;
+    /* background-color: #4CAF50; */
+    background-color: red;
     color: white;
     border: none;
     cursor: pointer;
